Working on major progress page…
We may want to have them select the quarter and year they took the
course… need to figure out element for this but probably should just
work on dashboard.

--- a/todo.txt
+++ b/todo.txt
@@ -37,5 +37,6 @@ May want to use django's cycle template tag for quarters or something, idk.
 	
    * Help Page/tutorial 
    
+   *Decide on table condensed or not for major progress page
    
    poster? paper? Presentation??? User studies?
